# main.go
@@ -8,6 +8,7 @@ import (
 	"github.com/oTuff/go-startkode/db"
 	_ "github.com/oTuff/go-startkode/docs"
 	"github.com/oTuff/go-startkode/handlers"
+	"github.com/rs/cors"
 
 	httpSwagger "github.com/swaggo/http-swagger/v2"
 )
@@ -24,6 +25,7 @@ func run() (*http.ServeMux, error) {
 	mux.HandleFunc("/api/todos", handlers.GetAllTodos)
 	mux.HandleFunc("/api/todo/{id}", handlers.GetTodo)
 	mux.HandleFunc("DELETE /api/todo/{id}", handlers.DeleteTodo)
+	mux.HandleFunc("POST /api/todo", handlers.CreateTodo)
 
 	return mux, nil
 }
@@ -35,6 +37,8 @@ func main() {
 	}
 	defer db.DB.Close() // Ensure the database connection is closed at the end
 
+	handler := cors.Default().Handler(mux)
+
 	fmt.Println("Running server on port 4000")
-	log.Fatal(http.ListenAndServe(":4000", mux))
+	log.Fatal(http.ListenAndServe(":4000", handler))
 }
